<resources>
    <string name="app_name">Rain Effect Verse 2</string>
    <string name="yo_d">YO D</string>
    <string name="i_cant_stop">I CANT STOP</string>
    <string name="beautiful_weather">WEATHER</string>
    <string name="needa_ur_smile">NEEDA UR SMILE</string>
    <string name="make_some_noise">MAKE SOME NOISE</string>
    <string name="my_ladies">MY LADIES</string>
    <string name="come_on_girl">COME ON GIRL</string>
    <string name="verse_one">VERSE ONE</string>
    <string name="verse_two">VERSE TWO</string>
    <string name="gang">GANG</string>
    <string name="stop">STOP</string>
</resources>
